# cargo-stdx-check

./: .gitignore  Cargo.lock.bk  Cargo.toml  LICENSE  README.md
src/: main.rs
